dashboard component settings save, column text align fixes, dispaly components that failed to load

--- a/src/portal/content/less/app/main.less
+++ b/src/portal/content/less/app/main.less
@@ -2658,3 +2658,14 @@ md-dialog.two-rows-dialog-actions {
     align-items: flex-start;
   }
 }
+
+.center-text-message {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  font-weight: bold;
+  color: #f00;
+}
